[package]
name = "halo2_intdiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { branch = "develop-ce", default-features = false, features = [
    "halo2-pse",
    "display",
    "test-utils"
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-ecc = { branch = "develop-ce", default-features = false, features = [
    "halo2-pse",
    "display"
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
hex = "0.4.3"
itertools = "0.10.3"
env_logger = "0.10.0"
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
criterion = "0.4"
criterion-macro = "0.4"
approx = "0.5.0"